Invisible button fix v0 (#3317)

--- a/theme/serial.less
+++ b/theme/serial.less
@@ -145,3 +145,19 @@
 .serialindicator {
     cursor:pointer;
 }
+
+.ui.button.editorExport,
+    .ui.button.editorBack {
+    color: @editorCloseColor;
+    background: transparent none;
+    box-shadow: 0px 0px 0px @editorCloseBorderSize @editorCloseColor inset;
+    text-shadow: none;
+}
+
+.ui.button.editorExport:hover, 
+    .ui.button.editorExport:focus,
+    .ui.button.editorBack:hover,
+    .ui.button.editorBack:focus {
+    color: @editorCloseColorHover;
+    box-shadow: 0px 0px 0px @editorCloseBorderSize @editorCloseColorHover;
+}
